--- a/FelevesFeladat/Pages/ReviewEditorPage.xaml
+++ b/FelevesFeladat/Pages/ReviewEditorPage.xaml
@@ -25,7 +25,7 @@
 
             <Label Text="Helyszín" FontSize="12" TextColor="Gray"/>
             <Grid ColumnDefinitions="*, Auto">
-                <Entry Grid.Column="0" Text="{Binding CurrentReview.LocationName}" Placeholder="GPS koordináták vagy cím"/>
+                <Entry Grid.Column="0" Text="{Binding CurrentReview.LocationName }" Placeholder="Cím (pl. Budapest, Váci utca 1.)"/>
             </Grid>
 
             <Label Text="Értékelés (1-5)" FontSize="12" TextColor="Gray"/>
